manifests/seraphim/prod/iiff/Namespace-iiff.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: iiff
