manifests/seraphim/prod/iiff/Service-iiff.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: iiff
    app.kubernetes.io/name: iiff
    app.kubernetes.io/part-of: iiff
    app.kubernetes.io/version: dev
  name: iiff
  namespace: iiff
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: iiff
