manifests/seraphim/prod/iiff/HTTPRoute-iiff.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: iiff
    app.kubernetes.io/name: iiff
    app.kubernetes.io/part-of: iiff
    app.kubernetes.io/version: 0.2.0
  name: iiff
  namespace: iiff
spec:
  hostnames:
    - iiff.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: iiff
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
